--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 author: Mihai Fratila
 title: Blog Aplicatii Multimedia
-description: Acesta este un proeict pntru cursul de Aplicatii Multimedia.
+description: Acesta este un proeict pentru cursul de Aplicatii Multimedia.
